Refactor and simplify data classes in GroupingSampleAggregation